@startuml

skinparam classAttributeIconSize 0
skinparam CircledCharacterFontSize 0
skinparam CircledCharacterRadius 0

class Parser {
    + parseCommand(userInput: String): Command
    ~ checkDuplicateOption(processedOptions: Option[]) {static}
    ~ parseIntOptionValue(argument: String, option: String): int {static}
    ~ parseDoubleOptionValue(argument: String, option: String): double {static}
    ~ parseDateOptionValue(argument: String, option: String): LocalDate {static}
}

class AddCommandParser {
    + parse(commandArgs: String[]): AddCommand
}

class ListCommandParser {
    + parse(commandArgs: String[]): ListCommand
}

class RestockCommandParser {
    + parse(commandArgs: String[]): RestockCommand
}

class SearchCommandParser {
    + parse(commandArgs: String[]): SearchCommand
}

class SellCommandParser {
    + parse(commandArgs: String[]): SellCommand
}

class UpdateCommandParser {
    + parse(commandArgs: String[]): UpdateCommand
}

class DeleteCommandParser {
    + parse(commandArgs: String[]): DeleteCommand
}

AddCommandParser --* "1" Parser : < calls
SearchCommandParser --* "1" Parser : < calls
ListCommandParser --* "1" Parser : < calls

Parser "1" *-- RestockCommandParser : > calls
Parser "1" *-- SellCommandParser : > calls
Parser "1" *-- UpdateCommandParser : > calls

DeleteCommandParser -r-* "1" Parser : < calls

@enduml
